homepage/homepage-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-dep
  namespace: appspace
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      volumes:
        - name: homepage-config
          persistentVolumeClaim:
            claimName: homepage-pvc
      containers:
      - name: homepage
        image: ghcr.io/benphelps/homepage:latest
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: homepage-config
            mountPath: "/app/config"

---

apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: appspace
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ing
  namespace: appspace
spec:
  rules:
  - host: "rkth.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-service
            port:
              number: 3000
  tls:
    - hosts:
      - rkth.io
      secretName: homepage-cert
