homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: kuzka
spec:
  rules:
  - host: "rkth.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-service
            port:
              number: 3000
  tls:
    - hosts:
      - rkth.io
      secretName: homepage-cert
